Fixed extra padding on icons

--- a/Development/sass/credits/_icons.scss
+++ b/Development/sass/credits/_icons.scss
@@ -12,6 +12,7 @@ margin-top: $spacing;
 .images-image {
 	width: 2.5rem;
 	margin: 0.25rem;
+	vertical-align: middle;
 }
 
 }
